# langgraph-basics

./: .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml
notebooks/: 001-prueba.ipynb  002-simple.ipynb  003-messages.ipynb  004-llm.ipynb  006-chaining.ipynb  007-structured_output.ipynb  008-prompting.ipynb  test_repo_doc.py
spec/: 001-git-ops-and-improvements.md  plan.md
src/agents/: joke.py  rag.py  simple.py
src/agents/purchase_parser/: agent.py  state.py  tools.py
src/agents/purchase_parser/nodes/build_response/: node.py
src/agents/purchase_parser/nodes/calculate/: node.py
src/agents/purchase_parser/nodes/parse_text/: node.py  prompt.py
src/agents/repo_documenter/: agent.py  state.py
src/agents/repo_documenter/nodes/clone/: node.py
src/agents/repo_documenter/nodes/commit/: node.py
src/agents/repo_documenter/nodes/generate/: node.py  prompt.py
src/agents/repo_documenter/nodes/pull/: node.py
src/agents/repo_documenter/nodes/push/: node.py
src/agents/repo_documenter/nodes/read_code/: node.py
src/agents/repo_documenter/nodes/save_doc/: node.py
src/agents/repo_documenter/nodes/scan/: node.py
