[project]
name = "langgraph-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "langchain-cli>=0.0.37",
    "langgraph-cli[inmem]>=0.1.54",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
