[project]
name = "langgraph-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "langchain>=1.2.15",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langgraph-cli[inmem]>=0.4.19",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
